--- a/sc4-zookeeper/Dockerfile
+++ b/sc4-zookeeper/Dockerfile
@@ -25,6 +25,8 @@ RUN ln -s /opt/"$ZK_VERSION" /opt/zookeeper
 RUN cd /opt/zookeeper/conf \
     && cp -p zoo_sample.cfg zoo.cfg
 
+EXPOSE 2181
+
 HEALTHCHECK --interval=5s --retries=1 CMD netcat -f localhost 2181 || exit 1
 
 COPY zookeeper-startup.sh /
