expose: instead of ports:

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
         environment:
             - MYID=1
             - DELAY=0
-        ports:
-            - 2181:2181
+        expose:
+            - "2181"
     kafka-broker:
         build:
             context: ./sc4-kafka-broker
@@ -19,8 +19,8 @@ services:
             - ZOOKEEPER_SERVERS=zookeeper:2181
         links:
             - zookeeper
-        ports:
-            - 9092:9092
+        expose:
+            - "9092"
     kafka-maketopic:
         build:
             context: ./sc4-kafka-maketopic
