healthcheck init sequence runs. Long waiting until proceeding the initialisation

--- a/docker-compose-zookafka.yml
+++ b/docker-compose-zookafka.yml
@@ -4,19 +4,23 @@ services:
     zookeeper:
         build:
             context: ./sc4-zookeeper
-        hostname: "zookeeper"
-        container_name: "zookeeper"
         environment:
             - MYID=1
-            - DELAY=0
+            - DELAY=5
+        healthcheck:
+            test: /healthcheck
+            interval: 5s
+            timeout: 3s
+            retries: 2
         expose:
             - "2181"
     kafka-broker:
         build:
             context: ./sc4-kafka-broker
         environment:
-            - TOPICS=taxi,testtopic
             - ZOOKEEPER_SERVERS=zookeeper:2181
+        links:
+            - zookeeper
         depends_on:
             zookeeper:
                 condition: service_healthy
